--- a/skin/filtaquilla.css
+++ b/skin/filtaquilla.css
@@ -34,6 +34,15 @@ toolbarbutton.focusbutton {
   -moz-user-focus: normal;
 }
 
+/* style the file picker so that the textbox stretches */
+hbox.flexelementcontainer {
+  display: inline-flex !important;
+}
+input.flexinput {
+  flex-grow: 2 !important;
+}
+
+
 .search-value-custom[searchAttribute="filtaquilla@mesquilla.com#subjectRegex"] {
   -moz-binding: url("chrome://filtaquilla/content/bindings.xml#textbox");
 }
