--- a/skin/filtaquilla.css
+++ b/skin/filtaquilla.css
@@ -38,7 +38,9 @@ toolbarbutton.focusbutton {
 hbox.flexelementcontainer {
   display: inline-flex !important;
 }
-input.flexinput {
+
+input.flexinput,
+menulist.flexinput {
   flex-grow: 2 !important;
 }
 
