fixed a broken flex rule

--- a/skin/filtaquilla-prefs.css
+++ b/skin/filtaquilla-prefs.css
@@ -97,6 +97,7 @@ div.lineSpacer {
   opacity: 0;
   box-shadow: -2px 2px 5px rgba(0, 0, 0, 0.2);
   transition: opacity 0.3s, visibility 0s;
+  right: 20px !important; /* avoid cut off on the right */
 }
 
 .helpLink:hover .tooltip {
